<resources>
    <string name="app_name">QuickPic</string>
    <string name="question">Question: ...</string>
    <string name="level" translatable="false">"Level: "</string>
    <string name="round">"Round: "</string>
    <string name="points">"Points: "</string>
    <string name="btnStr3">Answer 3</string>
    <string name="btnStr1">Answer 1</string>
    <string name="btnStr2">Answer 2</string>
    <string name="bntStr4">Answer 4</string>
    <string name="time">"Time left: "</string>
    <string name="imgDescription">Guess this picture</string>
    <string name="imgBtnMountain">Start mountain quiz!</string>
    <string name="imgBtnFish">Start marine animals quiz!</string>
    <string name="imgBtnTree">Start tree quiz!</string>
    <string name="btnStartseite">Back to Start</string>
    <string name="tVGameOver" translatable="false">Game Over!</string>
    <string name="btnSaveName">Save</string>
    <string name="tVName">You\'ve made it to the top 3! \n Enter your name.</string>
    <string name="tVTitle" translatable="false">Highscore</string>
    <string name="youHaveReached">"You have reached "</string>
    <string name="reachedPoints">" points."</string>
    <string name="HighscoreFrom">" from "</string>
    <string name="tvPoints">"Points: "</string>
    <string name="new_level">New Level!</string>
    <string name="about">About Quickpic</string>
    <string name="instructions">GAME INSTRUCTIONS \n
        \n Playing Quickpic is easy:
        \n Pick a topic.
        \n Look at the picture and answer the questions
        \n Select the correct answer
        \n If your answer is correct, the button lights up green, you get a point and the next question appears.
        \n If your answer is incorrect, the button ligths up red. You loose a live, however, the correct answer will show up, so that you learn for the next round.
        \n After 5 questions, the next level appears.
        \n For each question, you get less time than before, so hurry up.
        \n If you loose all your lives or don't answer in time, your game is over.
        \n After 3 levels completed, you get to the highscore list.
        \n If your score is within the best 3, you may enter your name.
    </string>
    <string name="credits">Image credits for Quickpic:
        \n all images are from wikicommons, pixabay, or own photos (CC-BY).
    </string>
    <string name="btnhighscore">show highscore list</string>

    <string name="qm1">What is the name of this mountain?</string>
    <string name="qm2">How high is this mountain?</string>
    <string name="qm3">In which country lies this mountain?</string>
    <string name="qf1">What is the name of this animal?</string>
    <string name="qf2">How long can this animal get?</string>
    <string name="qf3">How much can this animal weigh?</string>
    <string name="qt1">What is the name of this tree?</string>
    <string name="qt2">How many species does this tree have?</string>
    <string name="qt3">What is the latin name of the tree?</string>



<!--    <string name="set_01">Mountains</string>
    <string name="set_02">Fish</string>
    <string name="set_01_Question_01">1. Bergefrage</string>
    <string name="set_01_Answer_01_01"></string>-->
</resources>

