<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.quickpic.QuizActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/LevelRoundPoints"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LiveClock">

                <TextView
                    android:id="@+id/tvRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    tools:text="@string/round" />

                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    tools:text="@string/points" />

                <TextView
                    android:id="@+id/tvLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:gravity="left"
                    tools:text="@string/level" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/Questions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="@string/question" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/imgLayout"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Questions">

                <ImageView
                    android:id="@+id/imgQuiz"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/imgDescription"
                    android:foregroundGravity="center_horizontal"
                    app:srcCompat="@color/colorPrimaryDark" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/btnLayout"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLayout">

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="10dp"
                    android:gravity="bottom|right"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    tools:text="@string/bntStr4" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_margin="10dp"
                    android:gravity="top|right"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    tools:text="@string/btnStr2" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left"
                    android:layout_margin="10dp"
                    android:gravity="bottom|left"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    tools:text="@string/btnStr3" />

                <Button
                    android:id="@+id/btn1"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_margin="10dp"
                    android:gravity="top|left"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    tools:text="@string/btnStr1" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/LiveClock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLayout">

                <LinearLayout
                    android:id="@+id/livesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp">

                    <FrameLayout
                        android:id="@+id/barTime"
                        android:layout_width="240dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/toast_background_color">

                    </FrameLayout>

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="Time Left"
                        tools:text="@string/time" />
                </FrameLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
