<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.quickpic.HighscoreActivity">

    <TextView
        android:id="@+id/tVcurrentPoints"
        android:layout_width="304dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/LlNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVHighscore" />

    <Button
        android:id="@+id/btnStartseite"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnStartseite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LlNameInput" />

    <TextView
        android:id="@+id/tVTitle"
        android:layout_width="299dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tVTitle"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVHighscore"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStartseite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVTitle"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/LlNameInput"
        android:layout_width="344dp"
        android:layout_height="121dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tVName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tVName"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/eTName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSaveName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveName"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
